@@ -1,6 +1,5 @@
 /****************************************************************************
- * configs/stm32f429i-disco/src/up_idle.c
- * arch/arm/src/board/up_idle.c
+ * configs/stm32f429i-disco/src/stm32_idle.c
  *
  *   Copyright (C) 2012 Gregory Nutt. All rights reserved.
  *   Authors: Gregory Nutt <gnutt@nuttx.org>
@@ -56,7 +55,7 @@
 #include "stm32_rcc.h"
 #include "stm32_exti.h"
 
-#include "stm32f429i-disco-internal.h"
+#include "stm32f429i-disco.h"
 
 /****************************************************************************
  * Pre-processor Definitions
@@ -89,7 +88,7 @@
  ****************************************************************************/
 
 #if defined(CONFIG_PM) && defined(CONFIG_RTC_ALARM)
-static void up_alarmcb(void);
+static void stm32_alarmcb(void);
 #endif
 
 /****************************************************************************
@@ -97,7 +96,7 @@ static void up_alarmcb(void);
  ****************************************************************************/
 
 /****************************************************************************
- * Name: up_idlepm
+ * Name: stm32_idlepm
  *
  * Description:
  *   Perform IDLE state power management.
@@ -105,7 +104,7 @@ static void up_alarmcb(void);
  ****************************************************************************/
 
 #ifdef CONFIG_PM
-static void up_idlepm(void)
+static void stm32_idlepm(void)
 {
 #ifdef CONFIG_RTC_ALARM
   struct timespec alarmtime;
@@ -218,11 +217,11 @@ errout:
     }
 }
 #else
-#  define up_idlepm()
+#  define stm32_idlepm()
 #endif
 
 /************************************************************************************
- * Name: up_alarmcb
+ * Name: stm32_alarmcb
  *
  * Description:
  *    RTC alarm service routine
@@ -230,7 +229,7 @@ errout:
  ************************************************************************************/
 
 #if defined(CONFIG_PM) && defined(CONFIG_RTC_ALARM)
-static void up_alarmcb(void)
+static void stm32_alarmcb(void)
 {
   /* This alarm occurs because there wasn't any EXTI interrupt during the
    * PM_STANDBY period. So just go to sleep.
@@ -270,7 +269,7 @@ void up_idle(void)
   /* Perform IDLE mode power management */
 
   BEGIN_IDLE();
-  up_idlepm();
+  stm32_idlepm();
   END_IDLE();
 #endif
 }
