@@ -1,6 +1,5 @@
 /****************************************************************************
- * config/stm32f429i-disco/src/up_nsh.c
- * arch/arm/src/board/up_nsh.c
+ * config/stm32f429i-disco/src/stm32_nsh.c
  *
  *   Copyright (C) 2012 Gregory Nutt. All rights reserved.
  *   Author: Gregory Nutt <gnutt@nuttx.org>
@@ -74,7 +73,7 @@
 #endif
 
 #include "stm32.h"
-#include "stm32f429i-disco-internal.h"
+#include "stm32f429i-disco.h"
 
 /****************************************************************************
  * Pre-Processor Definitions
